--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Forty by HTML5 UP</title>
+	<title>VisCommerce</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -179,19 +179,25 @@
 						<img src="images/pic03.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing2.html" class="link">Demo</a></h3>
+						<h3><a href="#!" onclick="toggle5()">Demo</a></h3>
 						<!-- <p>Lorem etiam nullam</p> -->
 
 					</header>
 				</article>
+
+				
 				<article id="blur4">
+
 					<span class="image">
-						<img src="images/pic04.jpg" alt="" />
+						<a href="#!" onclick="toggle4()">
+							<img src="images/pic04.jpg" alt="" />
+						</a>
 					</span>
 					<header class="major">
-						<h3><a href="#!" onclick="toggle4()" >Patent</a></h3>
+						<h3><a href="#!" onclick="toggle4()">Patent</a></h3>
 						<!-- <p>Nisl sed aliquam</p> -->
 					</header>
+
 				</article>
 
 				<!-- <article>
@@ -215,9 +221,9 @@
 			</section>
 
 		</div>
-		
+
 		<div class="patent-box-main-container" id="popup4">
-			<div class="patent-box" >
+			<div class="patent-box">
 				<div class="patent-box1">
 					<ul>
 						<li>
@@ -231,11 +237,22 @@
 				<div class="patent-box2">
 					<img style="max-width: 60%; " src="images/Simple Film Company Logo.svg" alt="">
 				</div>
-				
+
 			</div>
 			<a href="#!" class="close2" onclick="toggle4()">Close</a>
 		</div>
 
+		<div class="content" id="popup5">
+			<div class="video-container2">
+
+				<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+			</div>
+			<div style="margin-bottom: -3%; margin-top: 3%;"><a href="#!" class="close2" onclick="toggle5()">Close</a></div>
+			
+		</div>
 
 		<!-- Two -->
 		<section id="two">
