--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -19,7 +19,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<a href="index.html" class="logo"><strong>Viscommerce</strong> <span></span></a>
+			<a href="index.html" class="logo"><img class='first' src='../images/VisCommerce.svg'> <span></span></a>
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
