--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -191,7 +191,7 @@
 				</article>
 
 				
-				<article id="blur4" onclick="toggle4()" style="cursor: pointer;>
+				<article id="blur4" onclick="toggle4()" style="cursor: pointer;">
 
 					<span class="image">
 						
