--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -67,7 +67,7 @@
 		</section>
 
 		<section id="blur">
-			<h1 style="text-align: center; margin-top: 17%;">Why VisCommerce?</h1>
+			<h1 style="text-align: center; margin-top: 17%;"><span>Why VisCommerce?</span> </h1>
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
 					<img src="images/Untitled design (3).png" alt="">
