--- a/html5up-forty/landing.html
+++ b/html5up-forty/landing.html
@@ -73,7 +73,7 @@
 					<div class="content">
 						<div class="inner">
 							<header class="major">
-								<h3>eStore3D</h3>
+								<a href="http://viscommerce.com/estore3d/" target="_blank" rel="noopener noreferrer"><h3>eStore3D</h3></a>
 							</header>
 							<p>
 							<ul class="timeline-points ">
@@ -145,9 +145,9 @@
 
 					<div class="content">
 						<div class="inner">
-							<header class="major">
-								<h3>eSpace3D
-									App</h3>
+							<header class="major" style="cursor: pointer;">
+								<a href="http://viscommerce.com/eSpace3D.html" target="_blank" rel="noopener noreferrer"><h3>eSpace3D
+									App</h3></a>
 							</header>
 							<p>
 							<ul class="timeline-points">
