--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -50,13 +50,14 @@
 			<div class="inner top-container">
 				<header class="major main-heading">
 					<!-- <h1>Welcome to VisCommerce</h1> -->
-					<h1>Welcome to <br>
+					<h1 style="font-size: 2.3em;">Welcome to
 						<span class="txt-rotate" data-period="2000"
 							data-rotate='["VisCommerce", "VisualisingCommerce"]'></span>
 					</h1>
 
 				</header>
 				<video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video>
+				<h2 style="margin-top: 2%;">Design your spaces with AI, 3D and Internet technologies</h2>
 			</div>
 
 			<!-- <iframe width="560" height="315" style="z-index: 2;" src="https://www.youtube.com/embed/mcdg8bcfSsg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
@@ -67,7 +68,7 @@
 		</section>
 
 		<section id="blur">
-			<h1 style="text-align: center; margin-top: 17%;">Why VisCommerce?</h1>
+			<h1 style="text-align: center; margin-top: 10%;">Why VisCommerce?</h1>
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
 					<img src="images/Untitled design (3).png" alt="">
