--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -72,8 +72,8 @@
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
 					<img src="images/Untitled design (3).png" alt="">
-					<h3>Grow <span>revenue</span> by more than <span>100%</span> ?</h3>
-					<p style="font-size: larger; font-weight: bold;">eStore3D … A 3D powered <br> eStore .</p>
+					<h3>Grow revenue by more than 100% ?</h3>
+					<p style="font-size: larger; font-weight: bold;"> <span>eStore3D</span> … A 3D powered <br> eStore .</p>
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
 					<a href="#!" onclick="toggle()"><button
 							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
@@ -81,16 +81,16 @@
 
 				<div class="box1" id="two">
 					<img src="images/benefits2.jpeg" alt="">
-					<h3> Acquire <span>customers</span> for <span>life</span> ?</h3>
-					<p style="font-size: larger; font-weight: bold;">eSpace3D App … A Digital-Twin of Customer’s space .</p>
+					<h3> Acquire customers for life ?</h3>
+					<p style="font-size: larger; font-weight: bold;"> <span>eSpace3D App</span> … A Digital-Twin of Customer’s space .</p>
 					<!-- <button style="max-width: 70%; margin: auto;"><a href="#menu">More</a></button> -->
 					<a href="#!" onclick="toggle2()"><button
 							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits3.jpeg" alt="">
-					<h3> Sell <span>big-ticket</span> items <span>easily</span> ?</h3>
-					<p style="font-size: larger; font-weight: bold;">Collaboration3D … Collaboration with 3D, Video & Chat  .</p>
+					<h3> Sell big-ticket items easily ?</h3>
+					<p style="font-size: larger; font-weight: bold;"> <span>Collaboration3D</span>  … Collaboration with 3D, Video & Chat  .</p>
 					<a href="#!" onclick="toggle3()"><button
 							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
 				</div>
