--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -321,7 +321,7 @@
 	<!-- Contact -->
 	<section id="contact">
 		<div class="inner">
-			<section>
+			<!-- <section>
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field half">
@@ -342,7 +342,7 @@
 						<li><input type="reset" value="Clear" /></li>
 					</ul>
 				</form>
-			</section>
+			</section> -->
 			<section class="split">
 				<section>
 					<div class="contact-method">
@@ -358,7 +358,7 @@
 						<span>(000) 000-0000 x12387</span>
 					</div>
 				</section>
-				<section>
+				<!-- <section>
 					<div class="contact-method">
 						<span class="icon solid alt fa-home"></span>
 						<h3>Address</h3>
@@ -366,7 +366,7 @@
 							Nashville, TN 00000<br />
 							United States of America</span>
 					</div>
-				</section>
+				</section> -->
 			</section>
 		</div>
 	</section>
