--- a/html5up-forty/landing.html
+++ b/html5up-forty/landing.html
@@ -33,14 +33,16 @@
 		<!-- Menu -->
 		<nav id="menu">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="landing.html">Landing</a></li>
-				<li><a href="generic.html">Generic</a></li>
-				<li><a href="elements.html">Elements</a></li>
+				<li><a href="./index.html#usv">User Experience Video</a></li>
+				<li><a href="./index.html#blur">Why VisCommerce?</a></li>
+				<li><a href="./index.html#blur5">Demo</a></li>
+				<li><a href="landing.html">Features</a></li>
+				<li><a href="./index.html#blur4">Patent</a></li>
+				<li><a href="./index.html#blur6">Team</a></li>
 			</ul>
 			<ul class="actions stacked">
-				<li><a href="#" class="button primary fit">Get Started</a></li>
-				<li><a href="#" class="button fit">Log In</a></li>
+				<li><a href="http://viscommerce.com/estore3d/" class="button primary fit">eStore3D</a></li>
+				<li><a href="http://viscommerce.com/eSpace3D.html" class="button fit">eSpace3D App</a></li>
 			</ul>
 		</nav>
 
