--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -33,31 +33,28 @@
 		<!-- Menu -->
 		<nav id="menu">
 			<ul class="links">
-				<li><a href="#usv">User Experience Video</a></li>
-				<li><a href="#blur">Why VisCommerce?</a></li>
-				<li><a href="#blur5">Demo</a></li>
-				<li><a href="landing.html">Features</a></li>
-				<li><a href="#blur4">Patent</a></li>
-				<li><a href="#blur6">Team</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="landing.html">Landing</a></li>
+				<li><a href="generic.html">Generic</a></li>
+				<li><a href="elements.html">Elements</a></li>
 			</ul>
 			<ul class="actions stacked">
-				<li><a href="http://viscommerce.com/estore3d/" class="button primary fit">eStore3D</a></li>
-				<li><a href="http://viscommerce.com/eSpace3D.html" class="button fit">eSpace3D App</a></li>
+				<li><a href="#" class="button primary fit">Get Started</a></li>
+				<li><a href="#" class="button fit">Log In</a></li>
 			</ul>
 		</nav>
 		
 
 		<!-- Banner -->
 		<section id="banner" class="major">
-			<div class="inner top-container" id="usv">
+			<div class="inner top-container">
 				<header class="major main-heading">
 					<!-- <h1>Welcome to VisCommerce</h1> -->
-					<div class="textanimation">
-						<h1 style="font-size: 2.3em;">Welcome to
-							<span class="txt-rotate" data-period="2000"
-								data-rotate='["VisCommerce", "VisualisingCommerce"]'></span>
-						</h1>
-					</div>
+					<h1 style="font-size: 2.3em;">Welcome to
+						<span class="txt-rotate" data-period="2000"
+							data-rotate='["VisCommerce", "VisualisingCommerce"]'></span>
+					</h1>
+
 				</header>
 				<video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video>
 				<h2 style="margin-top: 2%;">Design your spaces with AI, 3D and Internet technologies</h2>
@@ -353,19 +350,14 @@
 						<h3>Email</h3>
 						<a href="#">information@untitled.tld</a>
 					</div>
+				</section>
+				<section>
 					<div class="contact-method">
 						<span class="icon solid alt fa-phone"></span>
 						<h3>Phone</h3>
 						<span>(000) 000-0000 x12387</span>
 					</div>
 				</section>
-				<!-- <section>
-					<div class="contact-method">
-						<span class="icon solid alt fa-phone"></span>
-						<h3>Phone</h3>
-						<span>(000) 000-0000 x12387</span>
-					</div>
-				</section> -->
 				<!-- <section>
 					<div class="contact-method">
 						<span class="icon solid alt fa-home"></span>
@@ -380,7 +372,7 @@
 	</section>
 
 	<!-- Footer -->
-	<!-- <footer id="footer">
+	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
 				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -391,7 +383,7 @@
 			</ul>
 			
 		</div>
-	</footer> -->
+	</footer>
 
 	</div>
 
