--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -19,7 +19,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<a href="index.html" class="logo"><img class='first' src='images/VisCommerce_Logo.png ' style="    max-width: 90px;
+			<a href="index.html" class="logo"><img class='first' src='images/VisCommerce_Logo.png ' style=" max-width: 50px;
 				margin-top: 20%;"> <span></span></a>
 			<nav>
 				
@@ -320,7 +320,7 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Email</h3>
-									<a href="#">info@viscommerce.com</a>
+									<a href="#"><span>info@viscommerce.com</span></a>
 								</div>
 								<div class="contact-method">
 									<span class="icon solid alt fa-phone"></span>
