--- a/html5up-forty/landing.html
+++ b/html5up-forty/landing.html
@@ -20,8 +20,8 @@
 		<!-- Header -->
 		<!-- Note: The "styleN" class below should match that of the banner element. -->
 		<header id="header" class="alt style2">
-			<a href="index.html" class="logo"><a href="index.html" class="logo"><img class='first' src='images/VisCommerce_Logo.png ' style="    max-width: 90px;
-				margin-top: 20%;"> <span></span></a> <span></span></a>
+			<a href="index.html" class="logo"><img class='first' src='images/VisCommerce_Logo.png ' style=" max-width: 50px;
+				margin-top: 20%;"> <span></span></a> 
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
@@ -54,8 +54,7 @@
 					<h1>Features</h1>
 				</header>
 				<div class="content">
-					<!-- <p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p> -->
+
 				</div>
 			</div>
 		</section>
