--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -78,8 +78,7 @@
 					<h3>Grow revenue by more than 100% ?</h3>
 					<p style="font-size: larger; font-weight: bold;"> <span>eStore3D</span> … A 3D powered <br> eStore .</p>
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
-					<a href="#!" onclick="toggle()"><button
-							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
+					<button onclick="toggle()" style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button>
 				</div>
 
 				<div class="box1" id="two">
@@ -87,15 +86,13 @@
 					<h3> Acquire customers for life ?</h3>
 					<p style="font-size: larger; font-weight: bold;"> <span>eSpace3D App</span> … A Digital-Twin of Customer’s space .</p>
 					<!-- <button style="max-width: 70%; margin: auto;"><a href="#menu">More</a></button> -->
-					<a href="#!" onclick="toggle2()"><button
-							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
+					<button onclick="toggle2()" style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button>
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits3.jpeg" alt="">
 					<h3> Sell big-ticket items easily ?</h3>
 					<p style="font-size: larger; font-weight: bold;"> <span>Collaboration3D</span>  … Collaboration with 3D, Video & Chat  .</p>
-					<a href="#!" onclick="toggle3()"><button
-							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
+					<button onclick="toggle3()" style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button>
 				</div>
 			</div>
 		</section>
