--- a/html5up-forty/landing.html
+++ b/html5up-forty/landing.html
@@ -71,7 +71,7 @@
 					<div class="content">
 						<div class="inner">
 							<header class="major">
-								<a href="http://viscommerce.com/estore3d/" target="_blank" rel="noopener noreferrer"><h3>eStore3D</h3></a>
+								<a href="http://viscommerce.com/estore3d/" target="_blank" rel="noopener noreferrer"><h3>eStore3D <i class="fas fa-external-link-square-alt"></i></h3></a>
 							</header>
 							<p>
 							<ul class="timeline-points ">
@@ -145,7 +145,7 @@
 						<div class="inner">
 							<header class="major" style="cursor: pointer;">
 								<a href="http://viscommerce.com/eSpace3D.html" target="_blank" rel="noopener noreferrer"><h3>eSpace3D
-									App</h3></a>
+									App <i class="fas fa-external-link-square-alt"></i></h3></a>
 							</header>
 							<p>
 							<ul class="timeline-points">
