--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="assets/css/bootstrap-4.5.0.min.css">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -141,7 +141,7 @@
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
 					<!-- <button onclick="toggle()" style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
 							class="fas fa-arrow-right"></i></button> -->
-							<a href="#" class="button-cards">More</a>
+					<a href="#" class="button-cards">More</a>
 				</div>
 
 				<div class="box1" id="two">
@@ -153,7 +153,7 @@
 					<!-- <button onclick="toggle2()"
 						style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
 							class="fas fa-arrow-right"></i></button> -->
-							<a href="#" class="button-cards">More</a>
+					<a href="#" class="button-cards">More</a>
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits3-removebg-preview.png" alt="">
@@ -163,7 +163,7 @@
 					<!-- <button onclick="toggle3()"
 						style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
 							class="fas fa-arrow-right"></i></button> -->
-							<a href="#" class="button-cards">More</a>
+					<a href="#" class="button-cards">More</a>
 				</div>
 			</div>
 		</section>
@@ -287,6 +287,7 @@
 		</div>
 
 		<div class="patent-box-main-container" id="popup4">
+			<a href="#!" class="close2" onclick="toggle4()">X</a>
 			<div class="patent-box">
 				<div class="patent-box1">
 					<ul>
@@ -303,81 +304,74 @@
 				</div>
 
 			</div>
-			<a href="#!" class="close2" onclick="toggle4()">Close</a>
+
 		</div>
 
 		<div class="content" id="popup5">
-			<div class="video-container2">
+			<div style="margin-bottom: -3%; margin-top: 3%;"><a href="#!" class="close2" onclick="toggle5()">X</a>
+				<div class="video-container2">
 
-				<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
-					title="YouTube video player" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen></iframe>
-			</div>
-			<div style="margin-bottom: -3%; margin-top: 3%;"><a href="#!" class="close2" onclick="toggle5()">Close</a>
+					<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
+						title="YouTube video player" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				</div>
+
 			</div>
 
 		</div>
 
 		<!-- Two -->
-		<section id="two">
-			<div class="inner">
 
-
-				<div id="collapseOne" class="panel-collapse collapse in expanded" role="tabpanel"
-					aria-labelledby="headingOne">
-					<div class="panel-body">
-						<div class="team-box" id="popup6">
-
-							<div class="team-wrapper">
-								<a class="card1 col-lg-3" href="#" style="width: 100%; height: 181px;">
-									<h3 class="team-text member1">Ramakrishna J Tumuluri</h3>
-									<p class="team-text member11">
-										Founder
-										<!-- <br> -->
-										<!-- 91-9885663163 -->
-									</p>
-									<div class="go-corner" href="#">
-										<div class="go-arrow">
-											→
-										</div>
-									</div>
-								</a>
-								<a class="card1" href="#" style="width: 100%; height: 181px;">
-									<h3 class="team-text">Gnan Sai</h3>
-									<p class="team-text" style="font-size: 20px;">3D Generalist</p>
-									<div class="go-corner" href="#">
-										<div class="go-arrow">
-											→
-										</div>
-									</div>
-								</a>
-								<a class="card1" href="#" style="width: 100%; height: 181px;">
-									<h3 class="team-text">Jeevan</h3>
-									<p class="team-text" style="font-size: 20px;">3D Content Developer</p>
-									<div class="go-corner" href="#">
-										<div class="go-arrow">
-											→
-										</div>
-									</div>
-								</a>
-								<a class="card1" id="c4" href="# " style="width: 100%; height: 181px;">
-									<h3 class="team-text">Nitish</h3>
-									<p class="team-text" style="font-size: 20px;">Student Intern</p>
-									<div class="go-corner" href="#">
-										<div class="go-arrow">
-											→
-										</div>
-									</div>
-								</a>
+		<div class="inner" id="popup6">
+			<a href="#!" class="close3" onclick="toggle6()">X</a>
+			<div class="team-box">
+				<div class="team-wrapper">
+					<a class="card1 " href="#" style="width: 100%; height: 181px;">
+						<h3 class="team-text member1">Ramakrishna J Tumuluri</h3>
+						<p class="team-text member11">
+							Founder
+							<!-- <br> -->
+							<!-- 91-9885663163 -->
+						</p>
+						<div class="go-corner" href="#">
+							<div class="go-arrow">
+								→
 							</div>
-							<a href="#!" class="close3" onclick="toggle6()">Close</a>
 						</div>
-
-					</div>
+					</a>
+					<a class="card1" href="#" style="width: 100%; height: 181px;">
+						<h3 class="team-text">Gnan Sai</h3>
+						<p class="team-text" style="font-size: 20px;">3D Generalist</p>
+						<div class="go-corner" href="#">
+							<div class="go-arrow">
+								→
+							</div>
+						</div>
+					</a>
+					<a class="card1" href="#" style="width: 100%; height: 181px;">
+						<h3 class="team-text">Jeevan</h3>
+						<p class="team-text" style="font-size: 20px;">3D Content Developer</p>
+						<div class="go-corner" href="#">
+							<div class="go-arrow">
+								→
+							</div>
+						</div>
+					</a>
+					<a class="card1" id="c4" href="# " style="width: 100%; height: 181px;">
+						<h3 class="team-text">Nitish</h3>
+						<p class="team-text" style="font-size: 20px;">Student Intern</p>
+						<div class="go-corner" href="#">
+							<div class="go-arrow">
+								→
+							</div>
+						</div>
+					</a>
 				</div>
+
 			</div>
-		</section>
+		</div>
+
 
 
 
