--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -141,7 +141,7 @@
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
 					<!-- <button onclick="toggle()" style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
 							class="fas fa-arrow-right"></i></button> -->
-					<a href="#" class="button-cards">More</a>
+					<a href="#!" class="button-cards" onclick="toggle()">More</a>
 				</div>
 
 				<div class="box1" id="two">
@@ -153,7 +153,7 @@
 					<!-- <button onclick="toggle2()"
 						style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
 							class="fas fa-arrow-right"></i></button> -->
-					<a href="#" class="button-cards">More</a>
+					<a href="#!" class="button-cards" onclick="toggle2()">More</a>
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits3-removebg-preview.png" alt="">
@@ -163,7 +163,7 @@
 					<!-- <button onclick="toggle3()"
 						style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
 							class="fas fa-arrow-right"></i></button> -->
-					<a href="#" class="button-cards">More</a>
+					<a href="#!" class="button-cards" onclick="toggle3()">More</a>
 				</div>
 			</div>
 		</section>
@@ -185,7 +185,7 @@
 				<p>We believe that 3D will be ubiquitous in the coming years.
 				</p>
 			</div>
-			<div class="close1"><a href="#!" onclick="toggle()">Close</a></div>
+			<div class="close1"><a href="#!" onclick="toggle()" style="color: white;">X</a></div>
 
 		</div>
 
@@ -211,7 +211,7 @@
 				<p>84% of consumers say being treated like a person, is very important to winning their business.
 				</p>
 			</div>
-			<div class="close1"><a href="#!" onclick="toggle2()">Close</a></div>
+			<div class="close1"><a href="#!" onclick="toggle2()" style="color: white;">X</a></div>
 
 		</div>
 
@@ -223,7 +223,7 @@
 				<p>Customers who chat with a brand convert three times more often.
 				</p>
 			</div>
-			<div class="close1"><a href="#!" onclick="toggle3()">Close</a></div>
+			<div class="close1"><a href="#!" onclick="toggle3()" style="color: white;">X</a></div>
 
 		</div>
 
