--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -235,7 +235,7 @@
 			<section id="one" class="tiles">
 				<article id="blur5" onclick="toggle5()" style="cursor: pointer;">
 					<span class="image">
-						<img src="images/pic03.jpg" alt="" />
+						<!-- <img src="images/pic03.jpg" alt="" /> -->
 					</span>
 					<header class="major">
 						<h3>Demo</h3>
@@ -245,7 +245,7 @@
 				</article>
 				<article id="blur7">
 					<span class="image">
-						<img src="images/pic01.jpg" alt="" />
+						<!-- <img src="images/pic01.jpg" alt="" /> -->
 					</span>
 					<header class="major">
 						<h3><a href="landing.html" class="link">Features</a></h3>
@@ -257,7 +257,7 @@
 
 					<span class="image">
 
-						<img src="images/pic04.jpg" alt="" />
+						<!-- <img src="images/pic04.jpg" alt="" /> -->
 
 					</span>
 					<header class="major">
@@ -269,7 +269,7 @@
 
 				<article id="blur6" onclick="toggle6()" style="cursor: pointer;">
 					<span class="image">
-						<img src="images/pic02.jpg" alt="" />
+						<!-- <img src="images/pic02.jpg" alt="" /> -->
 					</span>
 					<header class="major">
 						<h3>Team</h3>
