--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -66,22 +66,22 @@
 							<div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
 								<ul id="nav" class="navbar-nav ml-auto">
 									<li class="nav-item ">
-										<a href="#yt-video">Concept</a>
+										<a href="#usv">Concept</a>
 									</li>
 									<li class="nav-item">
-										<a href="#about">Benefits</a>
+										<a href="#blur">Benefits</a>
 									</li>
 									<li class="nav-item">
-										<a href="#demo">Demo</a>
+										<a href="#blur5">Demo</a>
 									</li>
 									<li class="nav-item">
 										<a href="#features">Features</a>
 									</li>
 									<li class="nav-item">
-										<a href="#patent">Patent</a>
+										<a href="#blur4">Patent</a>
 									</li>
 									<li class="nav-item">
-										<a href="#team">Team</a>
+										<a href="#blur6">Team</a>
 									</li>
 
 								</ul>
@@ -170,18 +170,18 @@
 
 		<div class="generic-maincontainer" id="popup">
 			<div class="generic-container">
-				<img src="./images/Picture1.jpg" alt="">
+				<img src="./images/houz1.png" alt="">
 				<p>11 x the ratio of visitors who view
 					3D models who buy compared to those who don’t.
 				</p>
 			</div>
 			<div class="generic-container">
-				<img src="./images/Picture4.png" alt="">
+				<img src="./images/shopify.png" alt="">
 				<p>Leveraging 3D and AR can increase conversion by up to 250%.
 				</p>
 			</div>
 			<div class="generic-container">
-				<img src="./images/Picture3.jpg" alt="">
+				<img src="./images/wayfair1.png" alt="">
 				<p>We believe that 3D will be ubiquitous in the coming years.
 				</p>
 			</div>
