--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -192,7 +192,7 @@
 
 		<div class="generic-maincontainer" id="popup2">
 			<div class="generic-container">
-				<img src="./images/Picture5.jpg" alt="">
+				<img src="./images/Untitled design (6).png" alt="">
 				<p>Digital-twin via re-constructed 3D models used for interior-designing.
 				</p>
 			</div>
@@ -202,12 +202,12 @@
 				</p>
 			</div>
 			<div class="generic-container">
-				<img src="./images/Picture7.png" alt="">
+				<img src="./images/Untitled design (4).png" alt="">
 				<p>66% of consumers say content that isn’t personalized would stop them from making a purchase .
 				</p>
 			</div>
 			<div class="generic-container">
-				<img src="./images/Picture8.png" alt="">
+				<img src="./images/Untitled design (5).png" alt="">
 				<p>84% of consumers say being treated like a person, is very important to winning their business.
 				</p>
 			</div>
