--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -178,18 +178,18 @@
 
 		<div class="generic-maincontainer" id="popup">
 			<div class="generic-container">
-				<img src="./images/houz1.png" alt="">
+				<img class="popupimg" src="./images/houz1.png" alt="">
 				<p>11 x the ratio of visitors who view
 					3D models who buy compared to those who don’t.
 				</p>
 			</div>
 			<div class="generic-container">
-				<img src="./images/shopify.png" alt="">
+				<img class="popupimg" src="./images/shopify.png" alt="">
 				<p>Leveraging 3D and AR can increase conversion by up to 250%.
 				</p>
 			</div>
 			<div class="generic-container">
-				<img src="./images/wayfair1.png" alt="">
+				<img class="popupimg" src="./images/wayfair1.png" alt="">
 				<p>We believe that 3D will be ubiquitous in the coming years.
 				</p>
 			</div>
@@ -227,7 +227,7 @@
 
 		<div class="generic-maincontainer" id="popup3">
 			<div class="generic-container">
-				<img src="./images//Picture9.png" alt="">
+				<img class="popupimg" src="./images//Picture9.png" alt="">
 				<p>Customers who chat with a brand convert three times more often.
 				</p>
 			</div>
