--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -109,7 +109,7 @@
 				<header class="major main-heading">
 					<!-- <h1>Welcome to VisCommerce</h1> -->
 					<div class="textanimation">
-						<h1>Welcome to VisCommerce</h1>
+						<h1 class="welcome">Welcome to VisCommerce</h1>
 					</div>
 				</header>
 				<!-- <video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video> -->
@@ -320,6 +320,14 @@
 				<div class="video-container2">
 
 					<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
+						title="YouTube video player" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				</div>
+
+				<div class="video-container">
+
+					<iframe id="yt-video2" max-width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen></iframe>
