--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -9,12 +9,25 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="assets/css/bootstrap-4.5.0.min.css">
 	<link rel="stylesheet" href="assets/css/animate.css">
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+		crossorigin="anonymous"></script>
+	<link rel="icon" type="image/png" href="images/VisCommerce_Logo.png" />
+
 </head>
 
 <body class="is-preload">
@@ -22,31 +35,7 @@
 	<!-- Wrapper -->
 	<div id="wrapper">
 
-		<!-- Header -->
-		<!-- <header id="header" class="alt">
-			<a href="index.html" class="logo"><img class='first' src='images/VisCommerce_Logo.png ' style=" max-width: 50px;
-				margin-top: 20%;"> <span></span></a>
-			<nav>
-				<a href="#menu">Menu</a>
 
-			</nav>
-		</header> -->
-
-		<!-- Menu -->
-		<!-- <nav id="menu">
-			<ul class="links">
-				<li><a href="#usv">User Experience Video</a></li>
-				<li><a href="#blur">Why VisCommerce?</a></li>
-				<li><a href="#blur5">Demo</a></li>
-				<li><a href="landing.html">Features</a></li>
-				<li><a href="#blur4">Patent</a></li>
-				<li><a href="#blur6">Team</a></li>
-			</ul>
-			<ul class="actions stacked">
-				<li><a href="http://viscommerce.com/estore3d/" class="button primary fit">eStore3D</a></li>
-				<li><a href="http://viscommerce.com/eSpace3D.html" class="button primary fit">eSpace3D App</a></li>
-			</ul>
-		</nav> -->
 		<div class="navbar-area sticky">
 			<div class="container">
 				<div class="row">
@@ -115,7 +104,7 @@
 				<!-- <video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video> -->
 				<div class="viscom-video">
 
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/_Fb7Vqfx3XU"
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/_Fb7Vqfx3XU?rel=0&modestbranding=1"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen style="border-radius: 10px;"></iframe>
@@ -157,10 +146,7 @@
 					<h3> Acquire customers for life ?</h3>
 					<p style="font-size: larger; font-weight: bold;">eSpace3D App … A Digital-Twin of Customer’s space .
 					</p>
-					<!-- <button style="max-width: 70%; margin: auto;"><a href="#menu">More</a></button> -->
-					<!-- <button onclick="toggle2()"
-						style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
-							class="fas fa-arrow-right"></i></button> -->
+
 					<a href="#!" class="button-cards" onclick="toggle2()">More</a>
 				</div>
 				<div class="box1" id="three">
