--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -118,7 +118,7 @@
 						allowfullscreen style="border-radius: 10px;"></iframe>
 
 				</div>
-				<h3 style="margin-top: 2%; ">Design your spaces with AI, 3D and Internet technologies</h3>
+				<h3 style="margin-top: 2%; text-align: center;" class="h3-second">Design your spaces with AI, 3D and Internet technologies</h3>
 			</div>
 
 			<!-- <iframe width="560" height="315" style="z-index: 2;" src="https://www.youtube.com/embed/mcdg8bcfSsg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
@@ -129,11 +129,11 @@
 		</section>
 
 		<section id="blur">
-			<h1 style="text-align: center; margin: 3% 0 3% 0;">Why VisCommerce?</h1>
+			<h1 style="text-align: center; margin: 3% 0 3% 0;" class="h1-second">Why VisCommerce?</h1>
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
 					<img src="images/Data_Trends-pana__2_-removebg-preview.png" alt="">
-					<h3>Grow revenue by more than 100% ?</h3>
+					<h3 class="h3-second">Grow revenue by more than 100% ?</h3>
 					<p style="font-size: larger; font-weight: bold;"> eStore3D … A 3D powered <br> eStore .</p>
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
 					<!-- <button onclick="toggle()" style="max-width: 70%; margin: auto; display: flex; outline:none ">More<i
@@ -143,7 +143,7 @@
 
 				<div class="box1" id="two">
 					<img src="images/benefits2new-removebg-preview.png" alt="">
-					<h3> Acquire customers for life ?</h3>
+					<h3 class="h3-second"> Acquire customers for life ?</h3>
 					<p style="font-size: larger; font-weight: bold;">eSpace3D App … A Digital-Twin of Customer’s space .
 					</p>
 
@@ -151,7 +151,7 @@
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits3-removebg-preview.png" alt="">
-					<h3> Sell big-ticket items easily ?</h3>
+					<h3 class="h3-second"> Sell big-ticket items easily ?</h3>
 					<p style="font-size: larger; font-weight: bold;"> Collaboration3D … Collaboration with 3D, Video &
 						Chat .</p>
 					<!-- <button onclick="toggle3()"
