--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -90,12 +90,12 @@
 					<h1>Features</h1>
 				</header>
 				<div class="content">
-
+                    
 				</div>
 			</div>
 		</section>
 
-        <section id="two" class="spotlights"> 
+        <!-- <section id="two" class="spotlights"> 
             <section>
 
                 <img class="image" style="max-height: 338.16px;" src="images/SalesPitch2-1.jpg" alt=""
@@ -274,7 +274,7 @@
                     </div>
                 </div>
             </section>
-        </section> 
+        </section>  -->
     </div>
 
 
