changes in solution page

--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -95,20 +95,27 @@
 			</div>
 		</section>
 
-        <!-- <section id="two" class="spotlights"> 
-            <section>
+        <section id="two" class="spotlights"> 
+            <section class="section-flex">
 
                 <img class="image" style="max-height: 338.16px;" src="images/SalesPitch2-1.jpg" alt=""
                     data-position="center center" />
 
-                <div class="content">
+                <div class="content-sol">
                     <div class="inner">
                         <header class="major">
-                            <a href="http://viscommerce.com/estore3d/" target="_blank" rel="noopener noreferrer">
-                                <h3>eStore3D <i class="fas fa-external-link-square-alt"></i></h3>
+                            <a rel="noopener noreferrer">
+                                <h3>3D Experience</h3>
                             </a>
                         </header>
                         <p>
+                            <ul  class="timeline-points expanded">
+                                <li>Experience sale items in Full 3D</li>
+                                <li>Zoom, Rotate objects</li>
+                                <li>View objects in various environments such as a beach or living room. </li>
+                            </ul>
+                        </p>
+                        <!-- <p>
                         <ul class="timeline-points ">
                             <h4>3D Experience</h4>
                             <li>
@@ -162,11 +169,12 @@
                                 Users experience greater satisfaction and lower cost.
                             </li>
                         </ul>
-                        </p>
+                        </p> -->
                        
                     </div>
                 </div>
             </section>
+            
             <section>
 
                 <img class="image" style="max-height: 518.16px" src="images/SalesPitch2-4.jpg" alt=""
@@ -274,7 +282,7 @@
                     </div>
                 </div>
             </section>
-        </section>  -->
+        </section> 
     </div>
 
 
