--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -110,9 +110,9 @@
                         </header>
                         <p>
                             <ul  class="timeline-points expanded">
-                                <li>Experience sale items in Full 3D</li>
-                                <li>Zoom, Rotate objects</li>
-                                <li>View objects in various environments such as a beach or living room. </li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">       Experience sale items in Full 3D</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">   Zoom, Rotate objects</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >   View objects in various environments such as a beach or living room. </li>
                             </ul>
                         </p>
                         <!-- <p>
