--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -64,7 +64,7 @@
 										<a href="#blur5">Demo</a>
 									</li>
 									<li class="nav-item">
-										<a href="#features">Features</a>
+										<a href="solutions.html">Solutions</a>
 									</li>
 									<li class="nav-item">
 										<a href="#blur4">Patent</a>
@@ -242,7 +242,7 @@
 						<!-- <img src="images/pic01.jpg" alt="" /> -->
 					</span>
 					<header class="major">
-						<h3><a href="landing.html" class="link">Features</a></h3>
+						<h3><a href="solutions.html" class="link">Solutions</a></h3>
 						<!-- <p>Ipsum dolor sit amet</p> -->
 					</header>
 				</article>
