--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -120,20 +120,20 @@
 
             <section class="section-flex-right">
 
-                <img class="image" style="max-height: 338.16px;" src="images/SalesPitch2-1.jpg" alt="" data-position="center center" />
+                <img class="image" style="max-height: 338.16px; right: 4rem;" src="/html5up-forty/images/eStore3d/change_appearance.png" alt="" data-position="center center"/>
 
                 <div class="content-sol-right" style="width: 47%;">
                     <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
-                                <h3>3D Experience</h3>
+                                <h3>Change Appearance</h3>
                             </a>
                         </header>
                         <p>
                             <ul  class="timeline-points expanded">
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">       Experience sale items in Full 3D</li>
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">   Zoom, Rotate objects</li>
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >   View objects in various environments such as a beach or living room. </li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change color of sofa cloth</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change textures</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" > Tryout various types of legs e.g Stainless steel, Wood</li>
                             </ul>
                         </p>
                     <!-- </div> -->
@@ -142,20 +142,20 @@
             
             <section class="section-flex-left">
 
-                <img class="image" style="max-height: 338.16px;" src="images/SalesPitch2-1.jpg" alt="" data-position="center center" />
+                <img class="image" style="max-height: 338.16px; width: 33%;" src="/html5up-forty/images/eStore3d/lights-control.png" alt="" data-position="center center" />
 
                 <div class="content-sol-left" style="width: 47%;">
                     <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
-                                <h3>3D Experience</h3>
+                                <h3>Light Controls</h3>
                             </a>
                         </header>
                         <p>
                             <ul  class="timeline-points expanded">
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">       Experience sale items in Full 3D</li>
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">   Zoom, Rotate objects</li>
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >   View objects in various environments such as a beach or living room. </li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn lights on / off</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change color of light with controls for Red, Green, Blue</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" > Change Brightness </li>
                             </ul>
                         </p>
                     <!-- </div> -->
@@ -164,20 +164,86 @@
 
             <section class="section-flex-right">
 
-                <img class="image" style="max-height: 338.16px;" src="images/SalesPitch2-1.jpg" alt="" data-position="center center" />
+
+                <img class="image" style="max-height: 338.16px; right: 10rem;" src="/html5up-forty/images/eStore3d/operate-cabinets.png" alt="" data-position="center center" />
 
                 <div class="content-sol-right" style="width: 47%;">
                     <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
-                                <h3>3D Experience</h3>
+                                <h3>Operate Cabinets</h3>
                             </a>
                         </header>
                         <p>
                             <ul  class="timeline-points expanded">
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">       Experience sale items in Full 3D</li>
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">   Zoom, Rotate objects</li>
-                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >   View objects in various environments such as a beach or living room. </li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and close doors</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on lights inside</li>
+                            </ul>
+                        </p>
+                    <!-- </div> -->
+                </div>
+            </section>
+
+            <section class="section-flex-left">
+
+                <img class="image" style="max-height: 338.16px;" src="/html5up-forty/images/eStore3d/dimensions-sofa.png" alt="" data-position="center center" />
+
+                <div class="content-sol-left" style="width: 47%;">
+                    <!-- <div class="inner"> -->
+                        <header class="major">
+                            <a rel="noopener noreferrer">
+                                <h3>Dimensions</h3>
+                            </a>
+                        </header>
+                        <p>
+                            <ul  class="timeline-points expanded">
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View length, width and other dimensions</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Use centi-meters, meters or feet</li>
+                            </ul>
+                        </p>
+                    <!-- </div> -->
+                </div>
+            </section>
+
+            <section class="section-flex-right">
+
+                <img class="image" style="max-height: 338.16px;" src="/html5up-forty/images/eStore3d/SimpleChair_Inscene0005.png" alt="" data-position="center center" />
+
+                <div class="content-sol-right" style="width: 47%;">
+                    <!-- <div class="inner"> -->
+                        <header class="major">
+                            <a rel="noopener noreferrer">
+                                <h3>Standalone & InScene</h3>
+                            </a>
+                        </header>
+                        <p>
+                            <ul  class="timeline-points expanded">
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View sale-items in Standalone and Inscene mode.</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Inscene mode allows combinations such as lamps, lights, paints. </li>
+                            </ul>
+                        </p>
+                    <!-- </div> -->
+                </div>
+            </section>
+            
+            <section class="section-flex-left" style="position: relative; top: 5rem; height: 32rem;">
+
+                <img class="image" style="max-height: 338.16px;" src="/html5up-forty/images/eStore3d/technologies-used.png" alt="" data-position="center center" />
+
+                <div class="content-sol-left" style="width: 47%;">
+                    <!-- <div class="inner"> -->
+                        <header class="major">
+                            <a rel="noopener noreferrer">
+                                <h3>Technologies, System Requirements</h3>
+                            </a>
+                        </header>
+                        <p>
+                            <ul  class="timeline-points expanded">
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Developed using Web-Technologies Html5,  CSS, Javascript  glTF</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Google’s model-viewer and Open-Source threejs.org used to render 3D content</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >Can be integrated with any eCommerce system (Magento, OpenCart)</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >Developed and tested on Windows, iOS and Android</li>
+                                <li ><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="" >Tested with all major browsers Google-Chrome, Microsoft Edge, Apple Safari, Mozilla Firefox </li>
                             </ul>
                         </p>
                     <!-- </div> -->
