--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -104,7 +104,7 @@
 				<!-- <video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video> -->
 				<div class="viscom-video">
 
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/_Fb7Vqfx3XU?rel=0&modestbranding=1"
+					<iframe width="650" height="315" src="https://www.youtube.com/embed/_Fb7Vqfx3XU?rel=0&modestbranding=1&controls=0"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen style="border-radius: 10px;"></iframe>
@@ -112,7 +112,7 @@
 				</div>
 				<div class="viscom-video2">
 
-					<iframe max-width="560" height="315" src="https://www.youtube.com/embed/_Fb7Vqfx3XU"
+					<iframe max-width="650" height="315" src="https://www.youtube.com/embed/_Fb7Vqfx3XU?rel=0&modestbranding=1&controls=0"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen style="border-radius: 10px;"></iframe>
@@ -305,7 +305,7 @@
 			<div style="margin-bottom: -3%; margin-top: 3%;"><a href="#!" class="close2" onclick="toggle5()">X</a>
 				<div class="video-container2">
 
-					<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
+					<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI?rel=0&modestbranding=1&controls=0"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen></iframe>
@@ -313,7 +313,7 @@
 
 				<div class="video-container">
 
-					<iframe id="yt-video2" max-width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
+					<iframe id="yt-video2" max-width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI?rel=0&modestbranding=1&controls=0"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen></iframe>
