--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -42,7 +42,7 @@
 					<div class="col-lg-12">
 						<nav class="navbar navbar-expand-lg">
 							<a class="navbar-brand" href="index.html">
-								<img class="logotop" src="images/logo.svg" alt="Logo">
+								<img class="logotop" src="images/logofinal.png" alt="Logo">
 							</a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse"
 								data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
