--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -40,7 +40,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img class="logotop" src="images/logo.svg" alt="Logo">
+                                <img class="logotop" src="images/logofinal.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -92,14 +92,29 @@
 
             <div class="row top">
                 <div class="col-lg-6">
-                    <header class="major">
-                        <h1 style="color: white;">VisCommerce</h1>
-                    </header>
-                    <!-- <div class="solution-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div> -->
+                    <div class="row">
+                        <div class="col-sm-8"></div>
+                        <div class="col-sm-8">
+                            <header style="display: flex; justify-content: center;">
+                                <h1 style="color: white;">VisCommerce</h1>
+                            </header>
+                            <div class="solution-text" style="color: white;">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat.
+                            </div>
+
+                            <div>
+                                <div class="btn-group1">
+                                    <button class="btn-sol">estore3d</button>
+                                    <button class="btn-sol">eSpace3D</button>
+                                </div>
+                                <div class="btn-group2">
+                                    <button class="btn-sol">collaboration3D</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="video-sol">
