--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -34,7 +34,7 @@
 </head>
 
 <body class="is-preload">
-    <div id="wrapper page-wrap">
+    <div id="wrapper page-wrap" style="display: flex; flex-direction: column;">
         <div class="navbar-area sticky">
             <div class="container">
                 <div class="row">
@@ -91,7 +91,33 @@
         </div> <!-- navbar area -->
         <section id="banner-sol" class="style2">
 
-            <div class="row top">
+            <div class="row top" style="display: flex;">
+                <div class="col-lg-6 video-sol">
+                    <!-- <div class="video-sol"> -->
+                        <video class="video-sol1" max-width="560" height="315" controls
+                            poster="../html5up-forty/images/eStore3d/change_appearance.png">
+                            <source src="../html5up-forty/videos/eStore3D_Demo_2.mp4" type="video/mp4" />
+                            <p class="vjs-no-js">
+                                To view this video please enable JavaScript, and consider upgrading to a
+                                web browser that
+                                <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5
+                                    video</a>
+                            </p>
+                        </video>
+
+                        <video class="video-sol2" width="400" height="315" controls
+                            poster="../html5up-forty/images/eStore3d/change_appearance.png">
+                            <source src="../html5up-forty/videos/eStore3D_Demo_2.mp4" type="video/mp4" />
+                            <p class="vjs-no-js">
+                                To view this video please enable JavaScript, and consider upgrading to a
+                                web browser that
+                                <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5
+                                    video</a>
+                            </p>
+                        </video>
+                    <!-- </div> -->
+                </div>
+
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-sm-8"></div>
@@ -121,20 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="video-sol">
-                        <video width="560" height="315" controls
-                            poster="../html5up-forty/images/eStore3d/change_appearance.png">
-                            <source src="../html5up-forty/videos/eStore3D_Demo_2.mp4" type="video/mp4" />4
-                            <p class="vjs-no-js">
-                                To view this video please enable JavaScript, and consider upgrading to a
-                                web browser that
-                                <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5
-                                    video</a>
-                            </p>
-                        </video>
-                    </div>
-                </div>
+                
             </div>
 
         </section>
