--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -118,7 +118,7 @@
                     <!-- </div> -->
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6 vismargin">
                     <div class="row">
                         <div class="col-sm-8"></div>
                         <div class="col-sm-8">
